[workspace]
members = [
  "libpcap-tools",
  "libpcap-analyzer",
  "libpcap-analyzer-live",
  "explugin-example",
  "pcap-analyzer",
  "pcap-info",
  "pcap-rewrite",
  "test-analyzer",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["cargo", "derive"] }
pcap-parser = { version = "0.17", features = ["data"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true
codegen-units = 1
incremental = false
# panic = 'abort'

[patch.crates-io]
# pcap-parser = { git="https://github.com/rusticata/pcap-parser" }
# pcap-parser = { path="../pcap-parser" }
