[package]
name = "explugin-example"
description = "Example of libpcap-analyzer plugin, in an external directory"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

[dependencies]
libpcap-analyzer = { path="../libpcap-analyzer" }
libpcap-tools = { path="../libpcap-tools" }
