[package]
name = "libpcap-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"
description = "Pcap Analysis Library (main library)"
license = "MIT/Apache-2.0"
keywords = ["pcap","network","parser","nom"]
categories = ["network-programming"]

[features]
default = []
all = ["plugin_community_id", "plugin_rusticata"]
plugin_community_id = ["sha1", "base64"]
plugin_rusticata = ["rusticata"]

[dependencies]
base64 = { version="0.10", optional=true }
circular = { git="https://github.com/chifflier/circular.git", branch="consume-noshift01" }
crossbeam-queue = "0.1.2"
env_logger = "0.6"
lazy_static = "1.2"
libpcap-tools = { path="../libpcap-tools" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nom = "4.2"
num_cpus = "1.10"
pnet_base = "0.22.0"
pnet_macros_support = "0.22.0"
pnet_packet = "0.22.0"
rand="0.6"
rand_chacha = "0.1"
sha1 = { version="0.6", features=["std"], optional=true }

[dependencies.rusticata]
# path = "../../rusticata"
git = "https://github.com/rusticata/rusticata.git"
optional = true

[dependencies.pcap-parser]
version = "0.5"
features = ["data"]
