[package]
name = "libpcap-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

description = "Pcap Analysis Library (main library)"
categories = ["network-programming"]

keywords    = ["pcap", "network", "tools"]
readme      = "../README.md"
license     = "MIT/Apache-2.0"

repository    = "https://github.com/rusticata/pcap-analyzer.git"
homepage      = "https://github.com/rusticata/pcap-analyzer"

[badges]
travis-ci                         = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues      = { repository = "rusticata/pcap-analyzer" }
maintenance                       = { status     = "actively-developed" }

[features]
default = ["release"]
release = ["plugin_community_id", "plugin_ospf", "plugin_rusticata", "plugin_tls_stats"]
all = ["release", "plugins_debug", "plugin_examples"]
plugin_community_id = ["sha1", "base64"]
plugins_debug = []
plugin_examples = []
plugin_ospf = ["ospf-parser"]
plugin_rusticata = ["rusticata"]
plugin_tls_stats = ["rusticata","tls-parser"]

[dependencies]
base64 = { version="0.12", optional=true }
crossbeam-channel = "0.4"
fasthash = "0.4"
fnv = "1.0"
indexmap = { version="1.1", features=["serde-1"] }
lazy_static = "1.2"
libpcap-tools = { path="../libpcap-tools" }
log = "0.4"
multimap = "0.8"
nom = "5.0"
num_cpus = "1.10"
ospf-parser = { version="0.2", optional=true }
pnet_base = "0.26"
pnet_macros_support = "0.26"
pnet_packet = "0.26"
rand="0.7"
rand_chacha = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version="0.6", features=["std"], optional=true }
tls-parser = { version="0.9", optional=true }

[dependencies.rusticata]
# path = "../../rusticata"
git = "https://github.com/rusticata/rusticata.git"
optional = true

[dependencies.pcap-parser]
version = "0.9"
features = ["data"]
