[package]
name = "libpcap-tools"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

[dependencies]
lazy_static = "1.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nom = "5.0"
toml="0.5"

[dependencies.pcap-parser]
version = "0.7.0"
features = ["data"]
