[package]
name = "libpcap-tools"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

description = "Library for creating of Pcap file analyzers"
categories = ["network-programming"]

keywords    = ["pcap", "network", "tools"]
readme      = "../README.md"
license     = "MIT/Apache-2.0"

repository    = "https://github.com/rusticata/pcap-analyzer.git"
homepage      = "https://github.com/rusticata/pcap-analyzer"

[badges]
travis-ci                         = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues      = { repository = "rusticata/pcap-analyzer" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
lazy_static = "1.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nom = "5.0"
toml="0.5"

[dependencies.pcap-parser]
version = "0.8"
features = ["data"]
