[package]
name = "pcap-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
explugin-example = { path="../explugin-example" }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
libpcap-analyzer = { path="../libpcap-analyzer" }
libpcap-tools = { path="../libpcap-tools" }
log = "0.4"
lz4 = "1.23"
xz2 = "0.1"

[dependencies.clap]
version = "2"
default-features = false
