[package]
name = "pcap-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2021"
rust-version = "1.74"

description = "Pcap file analyzer tool"
categories = ["network-programming"]

keywords = ["pcap", "network", "tools"]
readme = "../README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/rusticata/pcap-analyzer.git"
homepage = "https://github.com/rusticata/pcap-analyzer"

[badges]
travis-ci = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues = { repository = "rusticata/pcap-analyzer" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = { workspace = true }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
libpcap-analyzer = { version = "0.1.0", path = "../libpcap-analyzer" }
libpcap-tools = { version = "0.1.0", path = "../libpcap-tools" }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
lz4 = "1.23"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
xz2 = "0.1"
