[package]
name = "pcap-cli"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

description = "Pcap file conversion/rewrite tool"
categories = ["network-programming"]

keywords    = ["pcap", "network", "tools"]
readme      = "../README.md"
license     = "MIT/Apache-2.0"

repository    = "https://github.com/rusticata/pcap-analyzer.git"
homepage      = "https://github.com/rusticata/pcap-analyzer"

[badges]
travis-ci                         = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues      = { repository = "rusticata/pcap-analyzer" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive"] }
fern = "0.6"
lazy_static = "1.2"
libpcap-analyzer = { version="0.1.0", path="../libpcap-analyzer" }
libpcap-tools = { version="0.1.0", path="../libpcap-tools" }
log = { version = "0.4" }
pcap-parser = "0.16"
rustyline = "14.0"
serde_json = "1.0"
time = { version="0.3", features=["local-offset"] }
