[package]
name = "pcap-info"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

description = "Pcap file information tool"
categories = ["network-programming"]

keywords = ["pcap", "network", "tools"]
readme = "../README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/rusticata/pcap-analyzer.git"
homepage = "https://github.com/rusticata/pcap-analyzer"

[badges]
travis-ci = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues = { repository = "rusticata/pcap-analyzer" }
maintenance = { status = "actively-developed" }

[dependencies]
blake2 = "0.10"
clap = { version = "3.2", features = ["cargo", "derive"] }
digest = "0.10"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
sha-1 = "0.10"
sha2 = "0.10"
smart-default = "0.6"
time = { version="0.3", features=["local-offset"] }
xz2 = "0.1"

[dependencies.pcap-parser]
version = "0.14"
features = ["data", "serialize"]
