[package]
name = "pcap-rewrite"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2021"
rust-version = "1.74"

description = "Pcap file conversion/rewrite tool"
categories = ["network-programming"]

keywords = ["pcap", "network", "tools"]
readme = "../README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/rusticata/pcap-analyzer.git"
homepage = "https://github.com/rusticata/pcap-analyzer"

[badges]
travis-ci = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues = { repository = "rusticata/pcap-analyzer" }
maintenance = { status = "actively-developed" }

[lib]
name = "pcap_rewrite"
path = "src/lib.rs"
doc = true

[[bin]]
name = "pcap-rewrite"
path = "src/main.rs"
doc = false

[dependencies]
csv = "1.1.6"
clap = { workspace = true }
infer = "0.19.0"
libpcap-analyzer = { version = "0.1.0", path = "../libpcap-analyzer" }
libpcap-tools = { version = "0.1.0", path = "../libpcap-tools" }
log = { version = "0.4" }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
lz4 = "1.23"
pcap-parser = { workspace = true, features = ["serialize"] }
pnet_packet = "0.35"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xz2 = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
