[package]
name = "test-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
explugin-example = { path="../explugin-example" }
libpcap-analyzer = { path="../libpcap-analyzer" }
libpcap-tools = { path="../libpcap-tools" }
log = { version = "0.4" }
lz4 = "1.23"
serde_json = "1.0"
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version="0.3", features=["env-filter","fmt","json"] }
xz2 = "0.1"
