[package]
name = "test-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
live = ["libpcap-analyzer-live", "ctrlc"]

[dependencies]
clap = { workspace = true }
ctrlc = { version = "3.4", optional = true }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
explugin-example = { path = "../explugin-example" }
libpcap-analyzer = { path = "../libpcap-analyzer" }
libpcap-analyzer-live = { path = "../libpcap-analyzer-live", optional = true }
libpcap-tools = { path = "../libpcap-tools" }
log = { version = "0.4" }
lz4 = "1.23"
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xz2 = "0.1"
